--- a/blogApp/templates/blog/pagination.html
+++ b/blogApp/templates/blog/pagination.html
@@ -1,4 +1,4 @@
-<div class="pagination">
+<!-- <div class="pagination">
     <span class="step-links">
 	{% if page.has_previous %}
 	<a	href="?page={{	page.previous_page_number }}">Previous</a>
@@ -8,4 +8,4 @@
 	</span> {% if page.has_next %}
     <a href="?page={{ page.next_page_number }}">Next</a> {% endif %}
     </span>
-</div>
+</div> -->
