--- a/blogApp/templates/blog/post/share.html
+++ b/blogApp/templates/blog/post/share.html
@@ -1,4 +1,4 @@
-{% extends "blog/base.html" %} {% block title %}Share a post{% endblock %} {% block content %} {% if sent %}
+<!-- {% extends "blog/base.html" %} {% block title %}Share a post{% endblock %} {% block content %} {% if sent %}
 <h1>E-mail successfully sent</h1>
 <p>
     "{{ post.title }}" was successfully sent to {{ form.cleaned_data.to }}.
@@ -9,4 +9,4 @@
     {{ form.as_p }} {% csrf_token %}
     <input type="submit" value="Send	e-mail">
 </form>
-{% endif %} {% endblock %}
+{% endif %} {% endblock %} -->
