--- a/blogApp/templates/blog/base.html
+++ b/blogApp/templates/blog/base.html
@@ -5,13 +5,215 @@
 <head>
     <title>{% block title %}{% endblock %}</title>
     <link href="{%	static 'css/blog.css'	%}" rel="stylesheet">
+    
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
+
+    
+    <!-- Font Awesome icons cdn -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+    <!-- Swiper Slider CSS file -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/6.8.0/swiper-bundle.min.css">
+    <!-- Custom style css file -->
+    <link rel="stylesheet" href="{%	static 'style.css'	%}">
+    
 </head>
 
 <body>
+     <!-- Header Section -->
+     <header id="header" class="shadow bg-light">
+        <nav class="container navbar">
+            <a href="/index.html" class="nav-brand text-dark">
+                Gridy
+            </a>
+            <!-- toggle button -->
+            <button class="toggle-button">
+                <span>
+                    <i class="fas fa-bars"></i>
+                </span>
+            </button>
+            <!-- Collapse on toggle button click -->
+            <div class="collapse">
+                <ul class="navbar-nav">
+                    <a href="#" class="nav-link">Home</a>
+                    <a href="#" class="nav-link">Blog</a>
+                    <a href="#" class="nav-link">Pages</a>
+                    <a href="#" class="nav-link">Categories</a>
+                    <a href="#" class="nav-link">About</a>
+                    <a href="#" class="nav-link">Contact</a>
+                </ul>
+            </div>
+            <!-- Collapse on toggle button click -->
+            <div class="collapse">
+                <ul class="navbar-nav">
+                    <div class="search-box">
+                        <a href="{% url 'blogApp:logout' %}" class="nav-link">
+                            Logout &nbsp;<i class="fas fa-sign-out-alt"></i>
+                        </a>
+                    </div>
+                    <div class="search-box">
+                        <a href="{% url 'blogApp:add_post' %}" class="nav-link bg-success">
+                            Add  &nbsp;<i class="fas fa-sign-out-alt"></i>
+                        </a>
+                    </div>
+                    <a href="#" class="nav-link">
+                        <i class="fab fa-facebook-f"></i>
+                    </a>
+                    <a href="#" class="nav-link">
+                        <i class="fab fa-twitter"></i>
+                    </a>
+                    <a href="#" class="nav-link">
+                        <i class="fab fa-instagram"></i>
+                    </a>
+                    <a href="#" class="nav-link">
+                        <i class="fab fa-dribbble"></i>
+                    </a>
+                </ul>
+            </div>
+        </nav>
+    </header>
+    <!-- Header Section Close-->
     <div id="content">
+        <!-- Modal -->
+
         {% block content %} {% endblock %}
     </div>
+    <!-- Button trigger modal -->
 
+    <!-- Footer -->
+
+    <footer id="footer">
+        <div class="container">
+           <div class="row mb-3">
+               <div class="col-3">
+                   <h2 class="footer-title secondary-title">About Us</h2>
+
+                   <div class="secondary-title text-secondary">
+                       <p class="mt-2">
+                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
+                        Deserunt quis voluptate alias illum modi tenetur, iste voluptatem illo. Accusantium, corrupti!
+                       </p>
+
+                       <address>
+                           <i class="fas fa-map-marker-alt text-primary"></i>
+                           5 South Main Street Los Angeles, ZZ-96110 USA
+                       </address>
+
+                       <div class="phone">
+                        <i class="fas fa-mobile text-primary"></i>
+                        125-896-154
+                       </div>
+
+                       <div class="email">
+                        <i class="fas fa-envelope text-primary"></i>
+                        demosupport@gmail.com
+                       </div>
+                   </div>
+               </div>
+               <div class="col-3">
+                   <h2 class="footer-title secondary-title">Feature Post</h2>
+                    <div class="feature-post">
+                        <div class="flex-item">
+                            <article class="article">
+                                <div class="d-flex">
+                                    <a href="#">
+                                        <img src="{% static 'assests/img6.jpg' %}" class="object-fit px-1" alt="">
+                                        <div class="px-1">
+                                            <a href="#" class="text-title display-2 text-dark">
+                                                Looking for some feedback for this rejected track
+                                                technology
+                                            </a>
+                                            <p class="secondary-title text-secondary display-3">
+                                                <span><i class="far fa-clock text-primary"></i>Clock Wed 02, 2021</span>
+                                            </p>
+                                        </div>
+                                    </a>
+                                </div>
+                            </article>
+                        </div>
+                        <div class="flex-item">
+                            <article class="article">
+                                <div class="d-flex">
+                                    <a href="#">
+                                        <img src="{% static 'assests/img2.jpg' %}" class="object-fit px-1" alt="">
+                                        <div class="px-1">
+                                            <a href="#" class="text-title display-2 text-dark">
+                                                Looking for some feedback for this rejected track
+                                                technology
+                                            </a>
+                                            <p class="secondary-title text-secondary display-3">
+                                                <span><i class="far fa-clock text-primary"></i>Clock Wed 02, 2021</span>
+                                            </p>
+                                        </div>
+                                    </a>
+                                </div>
+                            </article>
+                        </div>
+                        <div class="flex-item">
+                            <article class="article">
+                                <div class="d-flex">
+                                    <a href="#">
+                                        <img src="{% static 'assests/img9.jpg' %}" class="object-fit px-1" alt="">
+                                        <div class="px-1">
+                                            <a href="#" class="text-title display-2 text-dark">
+                                                Looking for some feedback for this rejected track
+                                                technology
+                                            </a>
+                                            <p class="secondary-title text-secondary display-3">
+                                                <span><i class="far fa-clock text-primary"></i> Clock Wed 02, 2021</span>
+                                            </p>
+                                        </div>
+                                    </a>
+                                </div>
+                            </article>
+                        </div>
+                    </div>
+               </div>
+               <div class="col-3">
+                   <h2 class="footer-title secondary-title">Tags</h2>
+
+                   <div class="tags">
+                       <div class="d-flex flex-wrap">
+                           <a href="#" class="nav-link btn bg-light">Travel</a> 
+                           <a href="#" class="nav-link btn bg-light">Food</a> 
+                           <a href="#" class="nav-link btn bg-light">Lifestyle</a> 
+                           <a href="#" class="nav-link btn bg-light">Technology</a> 
+                           <a href="#" class="nav-link btn bg-light">Fashion</a> 
+                       </div>
+                   </div>
+
+                   <h2 class="footer-title secondary-title mt-2">Social</h2>
+
+                   <div class="tags social">
+                       <div class="d-flex flex-wrap">
+                        <a href="#" class="nav-link btn bg-light"><i class="fab fa-facebook-f"></i></a>
+                        <a href="#" class="nav-link btn bg-light"><i class="fab fa-twitter"></i></a>
+                        <a href="#" class="nav-link btn bg-light"><i class="fab fa-instagram"></i></a>
+                        <a href="#" class="nav-link btn bg-light"><i class="fab fa-dribbble"></i></a>
+                       </div>
+                   </div>
+               </div>
+           </div> 
+           <!-- Copyright command -->
+           <div class="copyright">
+               <p class="text-center text-secondary display-2">
+                   &copy; 2021 <a href="#" class="text-primary">Saikumar</a> All rights reserved.
+               </p>
+           </div>
+        </div>
+    </footer>
+
+    <!-- Footer ends-->
+
+
+    <!-- Masonry library for horizontal grid  -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/masonry/4.2.2/masonry.pkgd.min.js" integrity="sha512-JRlcvSZAXT8+5SQQAvklXGJuxXTouyq8oIMaYERZQasB8SBDHZaUbeASsJWpk0UUrf89DP3/aefPPrlMR1h1yQ==" crossorigin="anonymous"></script>
+    <!-- Swiper Slider Cdn -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/6.8.0/swiper-bundle.min.js"></script>
+    <!-- custom javascript main.js file -->
+    <script src="main.js"></script>
 </body>
 
 </html>
